--- a/.github/workflows/PythonCI.yml
+++ b/.github/workflows/PythonCI.yml
@@ -1,26 +1,32 @@
-name: Build app
+name: PythonCI
 
-on: push
+on:
+  - push
+  - pull_request
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
-    - name: Lint with flake8
+          pip install poetry
+          make install
+    - name: Run linter and pytest
       run: |
-        poetry run flake8 gendiff
-    - name: Test with pytest
-      run: |
-        poetry run pytest --cov=gendiff tests/ --cov-report xml
+        make check
+    - name: Test & publish code coverage
+      uses: paambaati/codeclimate-action@v2.7.4
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: make test-coverage
+        debug: true
