--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pytest = "*"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
