--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,15 @@ packages = [
 python = "^3.9"
 PyYAML = "^6.0"
 
+
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
 flake8 = "^4.0.1"
 pytest-cov = "^3.0.0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.diff_generator:main"
+gendiff = "gendiff.scripts.gendiff:main"
